WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138801
DataDetectors PageOverlay callbacks can come in to the wrong overlay
https://bugs.webkit.org/show_bug.cgi?id=138801
Summary
DataDetectors PageOverlay callbacks can come in to the wrong overlay
Tim Horton
Reported
2014-11-17 11:54:11 PST
DataDetectors PageOverlay callbacks can come in to the wrong overlay
Attachments
Patch
(11.84 KB, patch)
2014-11-17 11:55 PST
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-11-17 11:55:04 PST
Created
attachment 241729
[details]
Patch
Tim Horton
Comment 2
2014-11-17 12:28:13 PST
http://trac.webkit.org/changeset/176221
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug